--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,11 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-  <button class="navbar-toggler hidden-sm-up" type="button"
-          data-toggle="collapse" data-target="#exCollapsingNavbar2"
-          aria-controls="exCollapsingNavbar2" aria-expanded="false"
-          aria-label="Toggle navigation">
-    &#9776;
-  </button>
-  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-    <a class="navbar-brand" [routerLink]="['/']">B2B</a>
-    <ul class="nav navbar-nav">
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
+<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" [routerLink]="['/']">B2B</a>
+
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item home" routerLinkActive="active" *ngIf="isSignedIn">
         <a class="nav-link" [routerLink]="['/home']">Home</a>
       </li>
