--- a/src/app/components/user-bought-list/user-bought-list.component.html
+++ b/src/app/components/user-bought-list/user-bought-list.component.html
@@ -1,2 +1,11 @@
 
-<p>Bought products</p>
+<p>Kupione produkty</p>
+
+<div class="list-group" *ngFor="let product of listTransaction">
+
+  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">{{product.date}}</h5>
+        </div>
+    </a>
+</div>
