--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -4,17 +4,17 @@
         
         <ul class="nav flex-column">
              <li class="nav-item">
-                <a class="nav-link active"routerLink="./" routerLinkActive="active">My products</a>
+                <a class="nav-link active"routerLink="./" routerLinkActive="active">Moje produkty</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active"routerLink="./add" routerLinkActive="active">Add product</a>
+                <a class="nav-link active"routerLink="./add" routerLinkActive="active">Dodaj produkt</a>
             </li>
            
             <li class="nav-item">
-                <a class="nav-link" routerLink="./bought" routerLinkActive="active">Bought list</a>
+                <a class="nav-link" routerLink="./bought" routerLinkActive="active">Lista zakupów</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="./sold" routerLinkActive="active">Sold list</a>
+                <a class="nav-link" routerLink="./sold" routerLinkActive="active">Lista sprzedaży</a>
             </li>
            
         </ul>
