--- a/src/app/shared/follow-btn/follow-btn.component.html
+++ b/src/app/shared/follow-btn/follow-btn.component.html
@@ -1,6 +1,6 @@
 <button type="button" *ngIf="canShowFollowBtn" class="btn btn-lg btn-primary"
-        (click)="follow(); $event.preventDefault()" [disabled]="busy">Follow
+        (click)="follow(); $event.preventDefault()" [disabled]="busy">Obserwuj
 </button>
 <button type="button" *ngIf="canShowUnfollowBtn" class="btn btn-lg btn-secondary"
-        (click)="unfollow(); $event.preventDefault()" [disabled]="busy">Unfollow
+        (click)="unfollow(); $event.preventDefault()" [disabled]="busy">Nie obserwuj
 </button>
