--- a/src/app/shared/pager/pager.component.html
+++ b/src/app/shared/pager/pager.component.html
@@ -1,8 +1,8 @@
 <nav>
   <button type="button" class="btn btn-outline-primary" (click)="showPrev()">
-    Prev
+    Poprzedni
   </button>
   <button type="button" class="btn btn-outline-primary" (click)="showNext()">
-    Next
+    Następny
   </button>
 </nav>
