--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -13,7 +13,6 @@
     <li class="list-group-item justify-content-between" *ngFor="let u of basket">
         {{u.product.name}}
         <span class="badge badge-default badge-pill">{{u.pieces}}</span>
-
     </li>
 </ul>
 <ul class="list-group">
@@ -25,7 +24,7 @@
 </ul>
 <ul class="list-group">
     <li class="list-group-item justify-content-between">
-        <button type="button" class="btn btn-danger">Usuń zawartość koszyka</button>
-        <button type="button" class="btn btn-success">Zatwierdź zakupy</button>
+        <button type="button" (click)="deleteBasket()" class="btn btn-danger">Usuń zawartość koszyka</button>
+        <button type="button" (click)="confirmTransaction()" class="btn btn-success">Zatwierdź zakupy</button>
     </li>
 </ul>
