--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,10 +10,10 @@
         <a class="nav-link" [routerLink]="['/home']">Home</a>
       </li>
        <li class="nav-item home" routerLinkActive="active" *ngIf="isSignedIn">
-        <a class="nav-link" [routerLink]="['/buy']">Buy</a>
+        <a class="nav-link" [routerLink]="['/buy']">Kup</a>
       </li>
        <li class="nav-item home" routerLinkActive="active" *ngIf="isSignedIn">
-        <a class="nav-link" [routerLink]="['/myproducts']">My Products</a>
+        <a class="nav-link" [routerLink]="['/myproducts']">Moje produkty</a>
       </li>
       <li class="nav-item top" routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}" *ngIf="!isSignedIn">
@@ -21,13 +21,13 @@
       </li>
       <li class="nav-item users" routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}" *ngIf="isSignedIn">
-        <a class="nav-link" [routerLink]="['/users']">Users</a>
+        <a class="nav-link" [routerLink]="['/users']">Użytkownicy</a>
       </li>
       <li class="nav-item help" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/help']">Help</a>
+        <a class="nav-link" [routerLink]="['/help']">Pomoc</a>
       </li>
       <li class="nav-item login" routerLinkActive="active" *ngIf="!isSignedIn">
-        <a class="nav-link" [routerLink]="['/login']">Sign in</a>
+        <a class="nav-link" [routerLink]="['/login']">Zaloguj</a>
       </li>
     </ul>
     <ul class="nav navbar-nav float-sm-right" *ngIf="isSignedIn">
@@ -37,11 +37,11 @@
       </li>
       <li class="nav-item settings" routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}">
-        <a class="nav-link" [routerLink]="['/users/me/edit']">Settings</a>
+        <a class="nav-link" [routerLink]="['/users/me/edit']">Ustawienia</a>
       </li>
       <li class="nav-item logout">
         <a class="nav-link" href="#"
-           (click)="logout(); $event.preventDefault()">Logout</a>
+           (click)="logout(); $event.preventDefault()">Wyloguj</a>
       </li>
     </ul>
   </div>
