--- a/src/app/pages/+follower-list/follower-list.component.html
+++ b/src/app/pages/+follower-list/follower-list.component.html
@@ -5,7 +5,7 @@
   </aside>
 
   <div class="col-md-8">
-    <h3>Followers</h3>
+    <h3>Obserwujący</h3>
     <mpt-related-user-list [listProvider]="listProvider"></mpt-related-user-list>
   </div>
 
