--- a/src/app/pages/+user-edit/user-edit.component.html
+++ b/src/app/pages/+user-edit/user-edit.component.html
@@ -4,7 +4,7 @@
 
   <div class="form-group"
        [class.has-danger]="!name.valid && name.touched">
-    <label class="col-form-label" for="nameInput">Name</label>
+    <label class="col-form-label" for="nameInput">Imię</label>
     <input
       type="text"
       class="form-control form-control-danger"
@@ -13,10 +13,10 @@
       maxlength="30"
       formControlName="name"/>
     <div *ngIf="name.hasError('required') && name.touched"
-         class="form-control-feedback">Name is required
+         class="form-control-feedback">Imię jest wymagane
     </div>
     <div *ngIf="name.hasError('minlength') && name.touched"
-         class="form-control-feedback">Name must be longer than 4 chars.
+         class="form-control-feedback">Imię musi być dłuższe niż 4 znaki
     </div>
   </div>
 
@@ -31,16 +31,16 @@
       maxlength="30"
       formControlName="email"/>
     <div *ngIf="email.hasError('required') && email.touched"
-         class="form-control-feedback">Email is required
+         class="form-control-feedback">Email jest wymagany
     </div>
     <div *ngIf="email.hasError('pattern') && email.touched"
-         class="form-control-feedback">Invalid format
+         class="form-control-feedback">Niewłaściwy format
     </div>
   </div>
 
   <div class="form-group"
        [class.has-danger]="!password.valid && password.touched">
-    <label class="col-form-label" for="passwordInput">Password</label>
+    <label class="col-form-label" for="passwordInput">Hasło</label>
     <input
       type="password"
       class="form-control form-control-danger"
@@ -49,14 +49,13 @@
       maxlength="100"
       formControlName="password"/>
     <div *ngIf="password.hasError('minlength') && password.touched"
-         class="form-control-feedback">Password must be longer than 8 chars.
+         class="form-control-feedback">Hasło musi być dłuższe niż 8 znaków.
     </div>
   </div>
 
   <div class="form-group"
        [class.has-danger]="!passwordConfirmation.valid && passwordConfirmation.touched">
-    <label class="col-form-label" for="passwordConfirmationInput">Confirm
-      Password</label>
+    <label class="col-form-label" for="passwordConfirmationInput">Potwierdź hasło</label>
     <input
       type="password"
       class="form-control form-control-danger"
@@ -65,10 +64,10 @@
       formControlName="passwordConfirmation"/>
     <div
       *ngIf="passwordConfirmation.hasError('matched') && passwordConfirmation.touched"
-      class="form-control-feedback">Doesn't match
+      class="form-control-feedback">Hasła się nie zgadzają
     </div>
   </div>
 
-  <button type="submit" class="btn btn-lg btn-primary">Submit</button>
+  <button type="submit" class="btn btn-lg btn-primary">Zapisz</button>
 
 </form>
