--- a/src/app/pages/+user-list/user-list.component.html
+++ b/src/app/pages/+user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<h1>All users</h1>
+<h1>Wszyscy użytkownicy</h1>
 
 <ul class="users list-unstyled">
   <li *ngFor="let u of users" class="clearfix">
