--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -9,13 +9,13 @@
   </div>
 
   <div class="form-group">
-    <label class="col-form-label" for="password">Password</label>
+    <label class="col-form-label" for="password">Hasło</label>
     <input type="password" #password class="form-control" id="password"
            placeholder="Password">
   </div>
 
-  <button type="submit" class="btn btn-lg btn-primary">Sign in</button>
+  <button type="submit" class="btn btn-lg btn-primary">Zaloguj</button>
 
 </form>
 
-<p>New user? <a [routerLink]="['/signup']">Sign up now!</a></p>
+<p>New user? <a [routerLink]="['/signup']">Zarejestruj się teraz!</a></p>
