--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -1,13 +1,12 @@
 
 <div class="jumbotron">
-  <h1 class="display-3">Welcome to the Sample App</h1>
+  <h1 class="display-3">Witaj na platformie B2B</h1>
 
-  <p class="lead">This is the home page for the Angular2 Tutorial sample
-    application.</p>
+  <p class="lead">Setki dostawców i producentów w jednym miejscu. Kupuj, sprzedawaj już dziś!</p>
 
   <p class="lead">
     <a class="btn btn-primary btn-lg" [routerLink]="['/signup']"
-       role="button">Sign up now!</a>
+       role="button">Zarejestruj sie teraz!</a>
   </p>
 </div>
 
