Bootstrap v4, corected component buy and add product

--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -1,39 +1,84 @@
-
 <div class="jumbotron">
-  <h1 class="display-3">Witaj na platformie B2B</h1>
+    <h1 class="display-3">Witaj na platformie B2B</h1>
 
-  <p class="lead">Setki dostawców i producentów w jednym miejscu. Kupuj, sprzedawaj już dziś!</p>
+    <p class="lead">Setki dostawców i producentów w jednym miejscu. Kupuj, sprzedawaj już dziś!</p>
 
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" [routerLink]="['/signup']"
-       role="button">Zarejestruj sie teraz!</a>
-  </p>
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" [routerLink]="['/signup']" role="button">Zarejestruj sie teraz!</a>
+    </p>
 </div>
 
 
-<div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+<div class="card-deck" style="margin-bottom:20px">
+    <div class="card">
+        <img class="card-img-top" src="../../../img/device.JPG" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title">Wieloplatformowość</h4>
+            <p class="card-text">Kosztystaj ze swojego sklepu w każdym mijescu i z każdego urządzenial</p>
+
+        </div>
     </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="card">
+        <img class="card-img-top" src="../../../img/easy.JPG" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title">Prostota w dostępie do informacji</h4>
+            <p class="card-text">Maksymalne uproszczenie procedur w celu szybkiego finalizowania transakcji.</p>
+
+        </div>
     </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="card">
+        <img class="card-img-top" src="../../../img/magazyn.JPG" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title">Wiele produktów w jednym miejscu</h4>
+            <p class="card-text">Jedna platforma, która pełni rolę pośrednika pomiędzy kupującymi, pośrednikami i producentami. Teraz w jednym miejscu!</p>
+
+        </div>
     </div>
-  </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card card-block">
+            <h3 class="card-title">Tytuł</h3>
+            <p class="card-text">Treść naszej karty, czyli jakiś opis czy cokolwiek chcemy w niej zamieścić.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card card-block">
+            <h3 class="card-title">Tytuł</h3>
+            <p class="card-text">Treść naszej karty, czyli jakiś opis czy cokolwiek chcemy w niej zamieścić.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+        </div>
+    </div>
+</div>
+
+<div class="card-deck" style="margin-bottom:20px">
+    <div class="card">
+        <img class="card-img-top" src="../../../img/jedynka.JPG" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title">Wieloplatformowość</h4>
+            <p class="card-text">Kosztystaj ze swojego sklepu w każdym mijescu i z każdego urządzenial</p>
+
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="../../../img/easy.JPG" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title">Prostota w dostępie do informacji</h4>
+            <p class="card-text">Maksymalne uproszczenie procedur w celu szybkiego finalizowania transakcji.</p>
+
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="../../../img/magazyn.JPG" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title">Wiele produktów w jednym miejscu</h4>
+            <p class="card-text">Jedna platforma, która pełni rolę pośrednika pomiędzy kupującymi, pośrednikami i producentami. Teraz w jednym miejscu!</p>
+
+        </div>
+    </div>
+
+
 </div>
