--- a/src/app/components/user-add-product/user-add-product.component.html
+++ b/src/app/components/user-add-product/user-add-product.component.html
@@ -1,45 +1,46 @@
-
-<p>Adding new product</p>
+<p>
+    Dodaj nowy Produkt</p>
 
 <form [formGroup]="myForm" *ngIf="active" (ngSubmit)="onSubmit(myForm.value)">
 
     <div class="form-group">
-        <label for="nameInput">Name</label>
-        <input type="text" class="form-control" id="nameInput" required formControlName="name" placeholder="Name of product" />
+        <label for="nameInput">Nazwa</label>
+        <input type="text" class="form-control" id="nameInput" required formControlName="name" placeholder="Nazwa produktu" />
         <div [hidden]="myForm.controls.name.valid || (myForm.controls.name.pristine && !submitted)">
-            Name is required (minimum 4 characters).
+            Nazwa musi zawierać (minimum 4 znaki).
         </div>
-
-
-
     </div>
-
-
     <div class="form-group">
-        <label for="priceInput">Price</label>
-        <input type="text" class="form-control" id="priceInput" required formControlName="price" placeholder="Set price of product"
-        />
+        <label for="priceInput">Cena</label>
+        <input type="text" class="form-control" id="priceInput" required formControlName="price" placeholder="Wprowadź cenę produktu" />
     </div>
 
     <div class="form-group">
-        <label for="descriptionInput">Description</label>
-        <textarea class="form-control" id="descriptionInput" required formControlName="description" rows="3" placeholder="Describe yours product"></textarea>
+        <label for="descriptionInput">Opis</label>
+        <textarea class="form-control" id="descriptionInput" required formControlName="description" rows="3" placeholder="Opisz swój produkt"></textarea>
     </div>
     <div class="form-group">
-        <label for="piecesInput">Pieces</label>
-        <input type="text" class="form-control" id="piecesInput" required formControlName="pieces" placeholder="Set count of pieces"
-        />
+        <label for="piecesInput">Sztuk</label>
+        <input type="text" class="form-control" id="piecesInput" required formControlName="pieces" placeholder="Wpisz liczbę dostępnych sztuk" />
     </div>
     <div class="form-group">
-        <label for="barcodeInput">Barcode</label>
+        <label for="barcodeInput">Kod kreskowy</label>
         <input type="text" class="form-control" id="barcode" required formControlName="barcode" placeholder="Scan Barcode" />
     </div>
+
     <div class="form-group">
-        <label for="categoryInput">Category</label>
-        <input type="text" class="form-control" id="categoryInput" required formControlName="idSubcategory" placeholder="Set Category"
-        />
+        <label for="exampleSelect1">Kategoria</label>
+        <select class="form-control" #t id="exampleSelect1" (change)="setSubcategory(t.value)">
+      <option *ngFor="let cat of category" [value]="cat.id" >{{cat.name}}</option>
+        </select>
     </div>
-    <button type="submit" class="btn btn-success">Add</button>
-    <button type="reset" class="btn btn-success">Clear</button>
+    <div class="form-group">
+        <label for="categoryInput">Podkategoria</label>
+        <select class="form-control" id="categoryInput" required formControlName="idSubcategory">
+      <option *ngFor="let subcategory of subcategory">{{subcategory.name}}</option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-success">Dodaj</button>
+    <button type="reset" class="btn btn-success">Wyczyść formularz</button>
 
 </form>
