--- a/src/app/components/user-bought-list/user-bought-list.component.html
+++ b/src/app/components/user-bought-list/user-bought-list.component.html
@@ -1,11 +1,12 @@
 
 <p>Kupione produkty</p>
 
-<div class="list-group" *ngFor="let product of listTransaction">
+<div class="list-group" *ngFor="let transaction of listTransaction">
 
   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">{{product.date}}</h5>
+      <h5 class="mb-1">Transakcja numer: {{transaction.id}}</h5>
+       <h6 class="mb-1">Stan: {{transaction.state}}</h6>
         </div>
     </a>
 </div>
