--- a/src/app/pages/+help/help.component.html
+++ b/src/app/pages/+help/help.component.html
@@ -1,1 +1,10 @@
-<h1>Help</h1>
+<h1>
+    Help
+
+</h1>
+
+<div class="container">
+    <p class="card-text">1. Aby uzyskać dostęp do platformy sprzedażowej, musisz się zarejestrować. Trwa to jedynie kilka sekund i otrzymujesz dostęp do setek produktów</p>
+    <img class="card-img-top" src="../../../img/mainwindow.jpg" alt="Card image cap">
+    <img class="card-img-top" src="../../../img/rejestracja.jpg" alt="Card image cap">
+</div>
