--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -40,16 +40,16 @@
 <div class="row">
     <div class="col-sm-6">
         <div class="card card-block">
-            <h3 class="card-title">Tytuł</h3>
-            <p class="card-text">Treść naszej karty, czyli jakiś opis czy cokolwiek chcemy w niej zamieścić.</p>
-            <a href="#" class="btn btn-primary">Button</a>
+            <h3 class="card-title">Prosta rejestracja</h3>
+            <p class="card-text">Tylko kilka prostych kroków, aby korzystać z platformy wymiany produktów</p>
+            <a href="#" class="btn btn-primary">Rejestruj</a>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="card card-block">
-            <h3 class="card-title">Tytuł</h3>
-            <p class="card-text">Treść naszej karty, czyli jakiś opis czy cokolwiek chcemy w niej zamieścić.</p>
-            <a href="#" class="btn btn-primary">Button</a>
+            <h3 class="card-title">Szybki dostęp</h3>
+            <p class="card-text">Zaloguj się i dowiedż się o najnowszych ofertach i produktach</p>
+            <a href="#" class="btn btn-primary">Zaloguj</a>
         </div>
     </div>
 </div>
