--- a/src/app/components/micropost-list/micropost-list.component.html
+++ b/src/app/components/micropost-list/micropost-list.component.html
@@ -1,18 +1,15 @@
 <div>
 
-  <h3>Microposts ({{userStats?.micropostCnt}})</h3>
-  <ol class="posts list-unstyled">
-    <li *ngFor="let p of posts">
-      <span class="content">{{p.content}}</span>
-      <span class="timestamp">Posted about {{p.createdAt | timeAgo}}.</span>
-      <a *ngIf="p.isMyPost" href="#" class="delete"
-         (click)="delete(p.id); $event.preventDefault()">delete</a>
-    </li>
-  </ol>
+    <h3>Posty ({{userStats?.micropostCnt}})</h3>
+    <ol class="posts list-unstyled">
+        <li *ngFor="let p of posts">
+            <span class="content">{{p.content}}</span>
+            <span class="timestamp">Post dodany {{p.createdAt | timeAgo}}.</span>
+            <a *ngIf="p.isMyPost" href="#" class="delete" (click)="delete(p.id); $event.preventDefault()">usuń</a>
+        </li>
+    </ol>
 
-  <button class="btn btn-secondary moreBtn" type="button" (click)="loadMore()"
-          [disabled]="noMorePosts">More
+    <button class="btn btn-secondary moreBtn" type="button" (click)="loadMore()" [disabled]="noMorePosts">Więcej
   </button>
 
 </div>
-
