--- a/src/app/components/related-user-list/related-user-list.component.html
+++ b/src/app/components/related-user-list/related-user-list.component.html
@@ -1,10 +1,9 @@
 <ul class="users list-unstyled">
-  <li *ngFor="let u of users" class="clearfix">
-    <mpt-gravatar [alt]="u.name" [hash]="u.avatarHash" [size]="60"></mpt-gravatar>
-    <a [routerLink]="['/users', u.id]">{{u.name}}</a>
-  </li>
+    <li *ngFor="let u of users" class="clearfix">
+        <mpt-gravatar [alt]="u.name" [hash]="u.avatarHash" [size]="60"></mpt-gravatar>
+        <a [routerLink]="['/users', u.id]">{{u.name}}</a>
+    </li>
 </ul>
 
-<button class="btn btn-secondary moreBtn" type="button" (click)="loadMore()"
-        [disabled]="noMoreUsers">More
+<button class="btn btn-secondary moreBtn" type="button" (click)="loadMore()" [disabled]="noMoreUsers">Więcej
 </button>
