--- a/src/app/components/user-stats/user-stats.component.html
+++ b/src/app/components/user-stats/user-stats.component.html
@@ -1,30 +1,27 @@
 <div>
 
-  <section class="user clearfix">
-    <h2>
-      <mpt-gravatar [hash]="user?.avatarHash" [size]="68"
-                    [alt]="user?.name"></mpt-gravatar>
-      {{user?.name}}
-    </h2>
-    <span *ngIf="!shownOnProfile">
-      <a class="profile-link" [routerLink]="['/users/' + user?.id]">view my profile</a>
+    <section class="user clearfix">
+        <h2>
+            <mpt-gravatar [hash]="user?.avatarHash" [size]="68" [alt]="user?.name"></mpt-gravatar>
+            {{user?.name}}
+        </h2>
+        <span *ngIf="!shownOnProfile">
+      <a class="profile-link" [routerLink]="['/users/' + user?.id]">zobacz mój profil</a>
     </span>
-    <span class="microposts" *ngIf="!shownOnProfile">
+        <span class="microposts" *ngIf="!shownOnProfile">
       {{(user?.userStats?.micropostCnt || 0) | pluralize:'micropost'}}
     </span>
-  </section>
+    </section>
 
-  <section class="relationships clearfix">
-    <div>
-      <a class="followings" [routerLink]="['/users/' + user?.id, 'followings']">
-        <strong class="stat">{{user?.userStats?.followingCnt || 0}}</strong>
-        followings
-      </a>
-      <a class="followers" [routerLink]="['/users/' + user?.id, 'followers']">
-        <strong class="stat">{{user?.userStats?.followerCnt || 0}}</strong>
-        followers
-      </a>
-    </div>
-  </section>
+    <section class="relationships clearfix">
+        <div>
+            <a class="followings" [routerLink]="['/users/' + user?.id, 'followings']">
+                <strong class="stat">{{user?.userStats?.followingCnt || 0}}</strong> Obserwujesz
+            </a>
+            <a class="followers" [routerLink]="['/users/' + user?.id, 'followers']">
+                <strong class="stat">{{user?.userStats?.followerCnt || 0}}</strong> Obserwujący
+            </a>
+        </div>
+    </section>
 
 </div>
