--- a/src/app/pages/+signup/signup.component.html
+++ b/src/app/pages/+signup/signup.component.html
@@ -2,80 +2,42 @@
 
 <form [formGroup]="myForm" (submit)="onSubmit(myForm.value)" novalidate>
 
-  <div class="form-group"
-       [class.has-danger]="!name.valid && name.touched">
-    <label class="col-form-label" for="nameInput">Imię</label>
-    <input
-      type="text"
-      class="form-control form-control-danger"
-      id="nameInput"
-      placeholder="Name"
-      maxlength="30"
-      formControlName="name"/>
-    <div *ngIf="name.hasError('required') && name.touched"
-         class="form-control-feedback">Name is required
+    <div class="form-group" [class.has-danger]="!name.valid && name.touched">
+        <label class="col-form-label" for="nameInput">Imię</label>
+        <input type="text" class="form-control form-control-danger" id="nameInput" placeholder="Imię" maxlength="30" formControlName="name" />
+        <div *ngIf="name.hasError('required') && name.touched" class="form-control-feedback">Imię jest wymagane
+        </div>
+        <div *ngIf="name.hasError('minlength') && name.touched" class="form-control-feedback">Imię musi zawieraż przynajmniej 4 znaki
+        </div>
     </div>
-    <div *ngIf="name.hasError('minlength') && name.touched"
-         class="form-control-feedback">Name must be longer than 4 chars.
-    </div>
-  </div>
 
-  <div class="form-group"
-       [class.has-danger]="!email.valid && email.touched">
-    <label class="col-form-label" for="emailInput">Email</label>
-    <input
-      type="email"
-      class="form-control form-control-danger"
-      id="emailInput"
-      placeholder="Email"
-      maxlength="30"
-      formControlName="email"/>
-    <div *ngIf="email.hasError('required') && email.touched"
-         class="form-control-feedback">Email is required
+    <div class="form-group" [class.has-danger]="!email.valid && email.touched">
+        <label class="col-form-label" for="emailInput">Email</label>
+        <input type="email" class="form-control form-control-danger" id="emailInput" placeholder="Email" maxlength="30" formControlName="email" />
+        <div *ngIf="email.hasError('required') && email.touched" class="form-control-feedback">Email jest wymagany
+        </div>
+        <div *ngIf="email.hasError('pattern') && email.touched" class="form-control-feedback">Niepoprawny format
+        </div>
     </div>
-    <div *ngIf="email.hasError('pattern') && email.touched"
-         class="form-control-feedback">Invalid format
-    </div>
-  </div>
 
-  <div class="form-group"
-       [class.has-danger]="!password.valid && password.touched">
-    <label class="col-form-label" for="passwordInput">Hasło</label>
-    <input
-      type="password"
-      class="form-control form-control-danger"
-      id="passwordInput"
-      placeholder="Password"
-      maxlength="100"
-      formControlName="password"/>
-    <div *ngIf="password.hasError('required') && password.touched"
-         class="form-control-feedback">Password is required
+    <div class="form-group" [class.has-danger]="!password.valid && password.touched">
+        <label class="col-form-label" for="passwordInput">Hasło</label>
+        <input type="password" class="form-control form-control-danger" id="passwordInput" placeholder="Hasło" maxlength="100" formControlName="password" />
+        <div *ngIf="password.hasError('required') && password.touched" class="form-control-feedback">Hasło jest wymagane
+        </div>
+        <div *ngIf="password.hasError('minlength') && password.touched" class="form-control-feedback">Hasło musi zawierać przynajmniej 8 znaków
+        </div>
     </div>
-    <div *ngIf="password.hasError('minlength') && password.touched"
-         class="form-control-feedback">Password must be longer than 8 chars.
-    </div>
-  </div>
 
-  <div class="form-group"
-       [class.has-danger]="!passwordConfirmation.valid && passwordConfirmation.touched">
-    <label class="col-form-label" for="passwordConfirmationInput">Potwierdź hasło</label>
-    <input
-      type="password"
-      class="form-control form-control-danger"
-      id="passwordConfirmationInput"
-      placeholder="Confirm Password"
-      formControlName="passwordConfirmation"/>
-    <div
-      *ngIf="passwordConfirmation.hasError('required') && passwordConfirmation.touched"
-      class="form-control-feedback">Password confirmation is required
+    <div class="form-group" [class.has-danger]="!passwordConfirmation.valid && passwordConfirmation.touched">
+        <label class="col-form-label" for="passwordConfirmationInput">Potwierdź hasło</label>
+        <input type="password" class="form-control form-control-danger" id="passwordConfirmationInput" placeholder="Potwierdzenie hasła" formControlName="passwordConfirmation" />
+        <div *ngIf="passwordConfirmation.hasError('required') && passwordConfirmation.touched" class="form-control-feedback">Potwierdzenie hasła jest wymagane
+        </div>
+        <div *ngIf="passwordConfirmation.hasError('matched') && passwordConfirmation.touched" class="form-control-feedback">Hasła się nie zgadzają
+        </div>
     </div>
-    <div
-      *ngIf="passwordConfirmation.hasError('matched') && passwordConfirmation.touched"
-      class="form-control-feedback">Doesn't match
-    </div>
-  </div>
 
-  <button type="submit" class="btn btn-lg btn-primary">Zarejestruj</button>
+    <button type="submit" class="btn btn-lg btn-primary">Zarejestruj</button>
 
 </form>
-
