--- a/src/app/pages/+user-edit/user-edit.component.html
+++ b/src/app/pages/+user-edit/user-edit.component.html
@@ -1,73 +1,39 @@
-<h1>Update your profile</h1>
+<h1>Zaaktualizuj swój profil</h1>
 
 <form [formGroup]="myForm" (submit)="onSubmit(myForm.value)" novalidate>
 
-  <div class="form-group"
-       [class.has-danger]="!name.valid && name.touched">
-    <label class="col-form-label" for="nameInput">Imię</label>
-    <input
-      type="text"
-      class="form-control form-control-danger"
-      id="nameInput"
-      placeholder="Name"
-      maxlength="30"
-      formControlName="name"/>
-    <div *ngIf="name.hasError('required') && name.touched"
-         class="form-control-feedback">Imię jest wymagane
+    <div class="form-group" [class.has-danger]="!name.valid && name.touched">
+        <label class="col-form-label" for="nameInput">Imię</label>
+        <input type="text" class="form-control form-control-danger" id="nameInput" placeholder="Name" maxlength="30" formControlName="name" />
+        <div *ngIf="name.hasError('required') && name.touched" class="form-control-feedback">Imię jest wymagane
+        </div>
+        <div *ngIf="name.hasError('minlength') && name.touched" class="form-control-feedback">Imię musi być dłuższe niż 4 znaki
+        </div>
     </div>
-    <div *ngIf="name.hasError('minlength') && name.touched"
-         class="form-control-feedback">Imię musi być dłuższe niż 4 znaki
-    </div>
-  </div>
 
-  <div class="form-group"
-       [class.has-danger]="!email.valid && email.touched">
-    <label class="col-form-label" for="emailInput">Email</label>
-    <input
-      type="email"
-      class="form-control form-control-danger"
-      id="emailInput"
-      placeholder="Email"
-      maxlength="30"
-      formControlName="email"/>
-    <div *ngIf="email.hasError('required') && email.touched"
-         class="form-control-feedback">Email jest wymagany
+    <div class="form-group" [class.has-danger]="!email.valid && email.touched">
+        <label class="col-form-label" for="emailInput">Email</label>
+        <input type="email" class="form-control form-control-danger" id="emailInput" placeholder="Email" maxlength="30" formControlName="email" />
+        <div *ngIf="email.hasError('required') && email.touched" class="form-control-feedback">Email jest wymagany
+        </div>
+        <div *ngIf="email.hasError('pattern') && email.touched" class="form-control-feedback">Niewłaściwy format
+        </div>
     </div>
-    <div *ngIf="email.hasError('pattern') && email.touched"
-         class="form-control-feedback">Niewłaściwy format
-    </div>
-  </div>
 
-  <div class="form-group"
-       [class.has-danger]="!password.valid && password.touched">
-    <label class="col-form-label" for="passwordInput">Hasło</label>
-    <input
-      type="password"
-      class="form-control form-control-danger"
-      id="passwordInput"
-      placeholder="Password"
-      maxlength="100"
-      formControlName="password"/>
-    <div *ngIf="password.hasError('minlength') && password.touched"
-         class="form-control-feedback">Hasło musi być dłuższe niż 8 znaków.
+    <div class="form-group" [class.has-danger]="!password.valid && password.touched">
+        <label class="col-form-label" for="passwordInput">Hasło</label>
+        <input type="password" class="form-control form-control-danger" id="passwordInput" placeholder="Hasło" maxlength="100" formControlName="password" />
+        <div *ngIf="password.hasError('minlength') && password.touched" class="form-control-feedback">Hasło musi być dłuższe niż 8 znaków.
+        </div>
     </div>
-  </div>
 
-  <div class="form-group"
-       [class.has-danger]="!passwordConfirmation.valid && passwordConfirmation.touched">
-    <label class="col-form-label" for="passwordConfirmationInput">Potwierdź hasło</label>
-    <input
-      type="password"
-      class="form-control form-control-danger"
-      id="passwordConfirmationInput"
-      placeholder="Confirm Password"
-      formControlName="passwordConfirmation"/>
-    <div
-      *ngIf="passwordConfirmation.hasError('matched') && passwordConfirmation.touched"
-      class="form-control-feedback">Hasła się nie zgadzają
+    <div class="form-group" [class.has-danger]="!passwordConfirmation.valid && passwordConfirmation.touched">
+        <label class="col-form-label" for="passwordConfirmationInput">Potwierdź hasło</label>
+        <input type="password" class="form-control form-control-danger" id="passwordConfirmationInput" placeholder="Potwierdź hasło" formControlName="passwordConfirmation" />
+        <div *ngIf="passwordConfirmation.hasError('matched') && passwordConfirmation.touched" class="form-control-feedback">Hasła się nie zgadzają
+        </div>
     </div>
-  </div>
 
-  <button type="submit" class="btn btn-lg btn-primary">Zapisz</button>
+    <button type="submit" class="btn btn-lg btn-primary">Zapisz</button>
 
 </form>
