--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -3,22 +3,25 @@
 <div *ngIf="checker">Twój koszyk zawiera:</div>
 <div *ngIf="checker">
     <ul class="list-group">
-        <li class="list-group-item justify-content-between">
-            <span>  Nazwa Produktu</span>
-            <span>Sztuk</span>
+        <li class="list-group-item justify-content-end">
+            <span class="mr-auto p-2">Nazwa Produktu</span>
+            <span class="p-2" style="margin-right:10px">Cena </span>
+            <span class="p-2">Sztuk</span>
+
         </li>
     </ul>
     <ul class="list-group">
-        <li class="list-group-item justify-content-between" *ngFor="let u of basket">
-            {{u.product.name}}
+        <li class="list-group-item justify-content-end" *ngFor="let u of basket">
+            <span class="mr-auto p-2">{{u.product.name}}</span>
+            <span class="p-2" style="margin-right:10px">{{u.product.price}} PLN </span>
             <span class="badge badge-default badge-pill">{{u.pieces}}</span>
         </li>
     </ul>
     <ul class="list-group">
         <li class="list-group-item justify-content-between">
-            <span>Podsumowanie zakupów</span>
-            <span>Łączny koszt:{{price}} PLN</span>
-            <span>Łącznie Sztuk:{{items}} </span>
+            <span style="text-decoration: underline;">Podsumowanie zakupów</span>
+            <span style="text-decoration: underline;">Łączny koszt: {{price}} PLN</span>
+            <span style="text-decoration: underline;">Łącznie Sztuk: {{items}} </span>
         </li>
     </ul>
     <ul class="list-group">
