--- a/src/app/pages/buy/buy.component.html
+++ b/src/app/pages/buy/buy.component.html
@@ -15,8 +15,8 @@
     <div class="col-10 col-md-10 ">
         <router-outlet> </router-outlet>
         <mpt-basket></mpt-basket>
-        <div *ngIf="clickedCategory ">
-            <h2>Lista Produktów</h2>
+        <div *ngIf="clickedCategory " style="margin-top: 15px">
+            <h2 ALIGN=CENTER>Lista Produktów</h2>
         </div>
         <mpt-product-list *ngIf="clickedCategory" [category]="clickedCategory "></mpt-product-list>
     </div>
