--- a/src/app/components/user-bought-list/user-bought-list.component.html
+++ b/src/app/components/user-bought-list/user-bought-list.component.html
@@ -2,13 +2,13 @@
     Kupione produkty</p>
 
 <div class="list-group" *ngFor="let transaction of listTransaction; let i=index" (click)="onSelect(transaction);setIndex(i); ">
-    <a class="list-group-item list-group-item-action flex-column align-items-start">
+    <a class="list-group-item list-group-item-action flex-column align-items-start" [class.list-group-item-warning]="transaction.state=='rozpoczeta'" [class.list-group-item-success]="transaction.state=='zakończona'">
         <div class="d-flex w-100 justify-content-end">
             <span class="mr-auto p-2">
                 <h5 class="mb-2">Transakcja numer: {{transaction.id}}</h5>
             </span>
             <span class=" p-2"> <h5 class="mb-1">Stan: {{transaction.state}}</h5>    </span>
-            <button class="btn btn-success" style="margin-right:5px;" (click)="pay(hero); $event.stopPropagation()">Płać</button>
+            <button *ngIf="transaction.state=='rozpoczeta'" class="btn btn-success" style="margin-right:5px;" (click)="pay(hero); $event.stopPropagation()">Płać</button>
             <button class="btn btn-danger" (click)="delete(hero); $event.stopPropagation()">X</button>
         </div>
     </a>
