--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -12,7 +12,7 @@
 
 <div class="card-deck" style="margin-bottom:20px">
     <div class="card">
-        <img class="card-img-top" src="../../../img/device.JPG" alt="Card image cap">
+        <img class="card-img-top" src="../../../img/device.jpg" alt="Card image cap">
         <div class="card-block">
             <h4 class="card-title">Wieloplatformowość</h4>
             <p class="card-text">Kosztystaj ze swojego sklepu w każdym mijescu i z każdego urządzenial</p>
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="../../../img/easy.JPG" alt="Card image cap">
+        <img class="card-img-top" src="../../../img/easy.jpg" alt="Card image cap">
         <div class="card-block">
             <h4 class="card-title">Prostota w dostępie do informacji</h4>
             <p class="card-text">Maksymalne uproszczenie procedur w celu szybkiego finalizowania transakcji.</p>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="../../../img/magazyn.JPG" alt="Card image cap">
+        <img class="card-img-top" src="../../../img/magazyn.jpg" alt="Card image cap">
         <div class="card-block">
             <h4 class="card-title">Wiele produktów w jednym miejscu</h4>
             <p class="card-text">Jedna platforma, która pełni rolę pośrednika pomiędzy kupującymi, pośrednikami i producentami. Teraz w jednym miejscu!</p>
@@ -56,7 +56,7 @@
 
 <div class="card-deck" style="margin-bottom:20px">
     <div class="card">
-        <img class="card-img-top" src="../../../img/jedynka.JPG" alt="Card image cap">
+        <img class="card-img-top" src="../../../img/jedynka.jpg" alt="Card image cap">
         <div class="card-block">
             <h4 class="card-title">Wieloplatformowość</h4>
             <p class="card-text">Kosztystaj ze swojego sklepu w każdym mijescu i z każdego urządzenial</p>
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="../../../img/easy.JPG" alt="Card image cap">
+        <img class="card-img-top" src="../../../img/easy.jpg" alt="Card image cap">
         <div class="card-block">
             <h4 class="card-title">Prostota w dostępie do informacji</h4>
             <p class="card-text">Maksymalne uproszczenie procedur w celu szybkiego finalizowania transakcji.</p>
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="../../../img/magazyn.JPG" alt="Card image cap">
+        <img class="card-img-top" src="../../../img/magazyn.jpg" alt="Card image cap">
         <div class="card-block">
             <h4 class="card-title">Wiele produktów w jednym miejscu</h4>
             <p class="card-text">Jedna platforma, która pełni rolę pośrednika pomiędzy kupującymi, pośrednikami i producentami. Teraz w jednym miejscu!</p>
