--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -11,7 +11,7 @@
   <div class="form-group">
     <label class="col-form-label" for="password">Hasło</label>
     <input type="password" #password class="form-control" id="password"
-           placeholder="Password">
+           placeholder="Hasło">
   </div>
 
   <button type="submit" class="btn btn-lg btn-primary">Zaloguj</button>
