--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -18,4 +18,4 @@
 
 </form>
 
-<p>New user? <a [routerLink]="['/signup']">Zarejestruj się teraz!</a></p>
+<p>Nowy użytkownik? <a [routerLink]="['/signup']">Zarejestruj się teraz!</a></p>
