--- a/src/app/components/user-add-product/user-add-product.component.html
+++ b/src/app/components/user-add-product/user-add-product.component.html
@@ -26,7 +26,7 @@
     <div class="form-group">
         <label for="barcodeInput">Kod kreskowy</label>
         <input type="text" class="form-control" [(ngModel)]="code" id="barcode" required formControlName="barcode" placeholder="Wprowadź lub skanuj kod QR" />
-        <a href="localhost:3000/index.html" target="_blank"> Uruchom kamerę i skanuj kod </a>
+        <a href="92.222.84.152:3001/index.html" target="_blank"> Uruchom kamerę i skanuj kod </a>
         
         <button type="button" (click)="openCamera()" class="btn btn-success">Dodaj kod</button>
         <button type="button" (click)="getProductByBarcode()" class="btn btn-success">Pobierz produkt</button>
